apps/base/babybuddy/babybuddy-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: babybuddy
  namespace: babybuddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: babybuddy
  template:
    metadata:
      labels:
        app: babybuddy
        app.kubernetes.io/name: babybuddy             
    spec:
      containers:
        - name: babybuddy
          image: lscr.io/linuxserver/babybuddy:latest
          ports:
            - containerPort: 8000
          volumeMounts:
            - name: config-storage
              mountPath: /config
      restartPolicy: Always
      volumes:
        - name: config-storage
          persistentVolumeClaim:
            claimName: babybuddy-pvc
