apps/base/babybuddy/babybuddy-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: babybuddy
  namespace: babybuddy
spec:
  type: ClusterIP
  selector:
    app: babybuddy
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
